--- a/presentation.mdx
+++ b/presentation.mdx
@@ -302,13 +302,14 @@ Overall benefits
 ### Future
 
 * More vizualization tools
-* More tools to assert correctness
 * More ways to integrate with JS 
+* More tools to assert correctness
 
 ---
 
 ### Current problems
 
+* May bring unwanted complexity to super simple components
 * Lack of familiarity from devs and designers
 * Small ecossystem
 
@@ -320,7 +321,9 @@ Lucas Reis
 
 _@iamlucasmreis_
 
-<img style={{ height: "80px" }} src="static/zocdoc.png" />
+**We're hiring!**
+
+<img style={{ height: "100px" }} src="static/zocdoc.png" />
 
 ---
 
