--- a/nordic-large.mdx
+++ b/nordic-large.mdx
@@ -1,4 +1,4 @@
-## Planning, Collaborating, And Finite State Machines
+## Planning, Finite State Machines, And Brazilian Food
 
 ---
 
@@ -14,6 +14,20 @@ _@iamlucasmreis_
 
 ---
 
+### My third favorite brazilian food is Pão de Queijo
+
+Cheese breads made from cassava flour, eggs, butter, and cheese.
+
+_Gluten free!_
+
+---
+
+import { Image } from 'mdx-deck'
+
+<Image src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/Cheesebread.jpg/2560px-Cheesebread.jpg" />
+
+---
+
 Did you go from 
 
 ## Infinite Planning
@@ -26,7 +40,7 @@ to
 
 ---
 
-We used to have months of planning and no early feedback from our stakeholders, it was very inneficient...  
+We used to have months of planning and no early feedback from our stakeholders, it was terrible...  
 
 ---
 
@@ -45,8 +59,6 @@ No, I'm only claiming we need **some** planning
 _not two months, but something from two hours to two days!_
 
 ---
-
-The reasoning:
 
 1. Coding is more **costly** than planning
 2. We are able to solve **big problems** and catch bugs with planning
@@ -87,6 +99,26 @@ Statecharts deal better with complexity
 * Clicking **outside** the dropdown closes it
 * It is possible to **reset** the selection
 * It is possibe to have a **partial** selection
+
+---
+
+<iframe 
+    src="https://codesandbox.io/embed/7y5286moy1"  
+    style={{ width: 500, borderRadius: "4px", overflow: "hidden", height: 500 }}
+    sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin">
+</iframe>
+
+---
+
+### My second favorite brazilian food is Camarão na Moranga
+
+Shrimp cooked inside a pumpkin, with heavy cream and a lot of cheese
+
+_You actually eat the pumpkin and it's delicious!_
+
+---
+
+<Image src="http://ducampeche.com.br/sites/default/files/camarao-moranga.jpg" />
 
 ---
 
@@ -153,14 +185,11 @@ import { Code } from './components'
 Uses `xstate` to actually manage your React components
 
 ---
+
 import SyntaxHighlighter from 'react-syntax-highlighter/prism'
 import { darcula } from 'react-syntax-highlighter/styles/prism'
 
-<SyntaxHighlighter language='jsx' style={darcula}>
-{`const InsurancePicker = withStateMachine(statechart)(Container);`} 
-</SyntaxHighlighter>
-
----
+1. Declare your extended state
 
 <div style={{ fontSize: '0.6em' }}>
 <SyntaxHighlighter language='jsx' style={darcula}>
@@ -177,6 +206,84 @@ import { darcula } from 'react-syntax-highlighter/styles/prism'
 
 ---
 
+2. Actions are component methods
+
+<div style={{ fontSize: '0.6em' }}>
+<SyntaxHighlighter language='jsx' style={darcula}>
+{`fetchCarriers() {
+  getCarriers()
+    .then(carriers => this.setState({ carriers }))
+    .then(() => this.props.transition("CARRIERS_FETCHED"))
+    .catch(() => this.props.transition("FETCH_CARRIERS_ERROR"))
+}
+fetchPlans() {
+  getPlans(this.state.selectedCarrier)
+      .then(plans => this.setState({ plans }))
+      .then(() => this.props.transition("PLANS_FETCHED"))
+      .catch(() => this.props.transition("FETCH_PLANS_ERROR"))
+}`} 
+</SyntaxHighlighter>
+</div>
+
+---
+
+3. Trigger events with transition
+
+<div style={{ fontSize: '0.6em' }}>
+<SyntaxHighlighter language='jsx' style={darcula}>
+{`selectPlan = selectedPlan => {
+  this.setState({ selectedPlan });
+  this.props.transition("PLAN_SELECTED");
+};
+reset = () => {
+  this.setState({
+    selectedCarrier: null,
+    selectedPlan: null,
+    carriers: [],
+    plans: []
+  });
+  this.props.transition("RESET");
+};`} 
+</SyntaxHighlighter>
+</div>
+
+---
+
+4. Use the State and Action components
+
+<div style={{ fontSize: '0.6em' }}>
+<SyntaxHighlighter language='jsx' style={darcula}>
+{`<State is="menu.visibility.shown">
+  <div
+    className="takeover"
+    onClick={() => this.props.transition("CLICKED_OUTSIDE")}
+  />
+  <State is="menu.insuranceOptions.*.loading">
+    <Loading />
+  </State>
+  <State is="menu.insuranceOptions.carrierSelection.*">
+    <InsuranceList list={carriers} onSelect={this.selectCarrier} />
+  </State>
+  <State is="menu.insuranceOptions.planSelection.*">
+    <InsuranceList list={plans} onSelect={this.selectPlan} />
+  </State>
+  <State is="menu.insuranceOptions.resetInsuranceQuestion">
+    <ResetInsuranceQuestion onReset={this.reset} />
+  </State>
+</State>`} 
+</SyntaxHighlighter>
+</div>
+
+---
+
+5. Wrap it with the statechart in the HOC
+
+<SyntaxHighlighter language='jsx' style={darcula}>
+{`const InsurancePicker = withStateMachine(statechart)(Container);`} 
+</SyntaxHighlighter>
+
+---
+
 import { ImageV } from './components'
 
 <ImageV src="static/whole-component.png"/>
@@ -184,8 +291,6 @@ import { ImageV } from './components'
 ---
 
 _AND WE'RE DONE!_
-
----
 
 <iframe 
     src="https://codesandbox.io/embed/7y5286moy1"  
@@ -215,6 +320,24 @@ _AND WE'RE DONE!_
 * More vizualization tools
 * More ways to integrate with JS 
 * More tools to assert correctness
+
+---
+
+### Current problems
+
+* May bring unwanted complexity to super simple components
+* Lack of familiarity from devs and designers
+* Small ecossystem
+
+---
+
+### My favorite brazilian food is Picanha
+
+A steak of the best brazilian cut of meat, with fried cassava flour, and brocolli rice with garlic
+
+---
+
+<Image src="https://ogimg.infoglobo.com.br/in/17074300-363-724/FT1086A/421/2013-631296056-2013072327814.jpg_20130723.jpg" />
 
 ---
 
