--- a/nordic backup.mdx
+++ b/nordic backup.mdx
@@ -26,13 +26,23 @@ to
 
 ---
 
-In the agile world we tend to jump into code **too soon**
+We used to have months of planning and no early feedback from our stakeholders, it was very inneficient...  
 
 ---
 
-Planning for a couple of hours will do wonders! 
+### ...but we are getting too far to the other side of the pendulum
 
-_(or even a couple of days for more complex components)_
+---
+
+_Wait, are you bringing back WATERFALL???_
+
+<img style={{ width: 500 }} src="static/scared.gif" />
+
+---
+
+No, I'm only claiming we need **some** planning
+
+_not two months, but something from two hours to two days!_
 
 ---
 
