final nordic js

--- a/nordicjs-presentation.mdx
+++ b/nordicjs-presentation.mdx
@@ -47,7 +47,7 @@ The reasoning:
 The best planning tools are:
 
 * **High-level** enough to be able to be developed by non-coders
-* **Low-level enough** to actually help you with your code
+* **Low-level** enough to actually help you with your code
 
 ---
 
@@ -152,7 +152,7 @@ import { darcula } from 'react-syntax-highlighter/styles/prism'
 
 ---
 
-<div style={{ fontSize: '0.6em' }}>
+<div style={{ fontSize: '0.8em' }}>
 <SyntaxHighlighter language='jsx' style={darcula}>
 {`class Container extends React.Component {
   state = {
